--- a/app/comps/deuda/deuda.html
+++ b/app/comps/deuda/deuda.html
@@ -18,7 +18,7 @@
           <thead>
             <tr>
                 <th scope="col"><p class="text-center">Tipo documento</p></th>
-                <th scope="col"><p class="text-center">N° aviso</p></th>
+                <th scope="col"><p class="text-center">N.º aviso</p></th>
                 <th scope="col"><p class="text-center">Fecha documento</p></th>
                 <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                 <th scope="col"><p class="text-center">Monto Original</p></th>
@@ -73,17 +73,17 @@
             <div class="col-md-12">
               <div class="card " >
                 <div class="card-body">
-                  <h5 class="card-title">Busqueda por cliente </h5>
+                  <h5 class="card-title">Búsqueda por cliente </h5>
                   <div class="row">
                     <div class="col-sm-12 col-md-6 col-lg-6">
-                      <!-- <label for="clientes">Busqueda por cliente</label> -->
+                      <!-- <label for="clientes">Búsqueda por cliente</label> -->
                       <div class="input-group mb-3">
                         <input type="text" id="clientes"
                         class="form-control"
                         ng-keydown="$event.keyCode === 13 && getClientNew(true)"
                         ng-model="nombre_cliente"
-                        placeholder="Busqueda por Cliente"
-                        aria-label="Busqueda por Cliente"
+                        placeholder="Búsqueda por Cliente"
+                        aria-label="Búsqueda por Cliente"
                         aria-describedby="basic-addon2">
                         <div class="input-group-append">
                           <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
@@ -145,7 +145,7 @@
 
 
                             <th scope="col"><p class="text-center">Tipo documento</p></th>
-                            <th scope="col"><p class="text-center">N° Fisico</p></th>
+                            <th scope="col"><p class="text-center">N.º Físico</p></th>
                             <th scope="col"><p class="text-center">Fecha documento</p></th>
                             <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
                             <th scope="col"><p class="text-center">Saldo</p></th>
@@ -202,7 +202,7 @@
 
                           <th scope="col"><p class="text-center">Fecha </p></th>
                           <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
-                          <th scope="col"><p class="text-center">N° Documento</p></th>
+                          <th scope="col"><p class="text-center">N.º Documento</p></th>
                           <th scope="col"><p class="text-center">Saldo</p></th>
                             <th scope="col"><p class="text-center">Opciones</p></th>
                           </tr>
