--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -125,17 +125,17 @@
           <div class="col-md-12">
             <div class="card " >
               <div class="card-body">
-                <h5 class="card-title">Busqueda por cliente </h5>
+                <h5 class="card-title">Búsqueda por cliente </h5>
                 <div class="row">
                   <div class="col-sm-12 col-md-6 col-lg-6">
-                    <!-- <label for="clientes">Busqueda por cliente</label> -->
+                    <!-- <label for="clientes">Búsqueda por cliente</label> -->
                     <div class="input-group mb-3">
                       <input type="text" id="clientes"
                       class="form-control"
                       ng-keydown="$event.keyCode === 13 && getClientNew(true)"
                       ng-model="nombre_cliente"
-                      placeholder="Busqueda por Cliente"
-                      aria-label="Busqueda por Cliente"
+                      placeholder="Búsqueda por Cliente"
+                      aria-label="Búsqueda por Cliente"
                       aria-describedby="basic-addon2">
                       <div class="input-group-append">
                         <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
@@ -190,9 +190,9 @@
                     <thead>
                       <tr>
                         <th scope="col"><p class="text-center">#</p></th>
-                        <!-- <th scope="col"><p class="text-center">N° Pedido</p></th> -->
+                        <!-- <th scope="col"><p class="text-center">N.º Pedido</p></th> -->
                         <!-- <th scope="col"><p class="text-center">Fecha pedido</p></th> -->
-                        <th scope="col"><p class="text-center">N° factura</p></th>
+                        <th scope="col"><p class="text-center">N.º factura</p></th>
                         <th scope="col"><p class="text-center">Fecha factura</p></th>
                         <th scope="col"><p class="text-center">Monto</p></th>
                         <th scope="col"><p class="text-center">Monto usd</p></th>
