--- a/app/comps/home/home.html
+++ b/app/comps/home/home.html
@@ -32,7 +32,7 @@
 
               <div class="card " >
                 <div class="card-body">
-                  <!-- <h5 class="card-title">Informacion del Cliente </h5> -->
+                  <!-- <h5 class="card-title">Información del Cliente </h5> -->
                   <div class="row">
 
                     <div class="col-md-4">
