--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -78,7 +78,7 @@
       <div class="col-md-6 mt-10 mb-10">
       <div class="card " >
           <div class="card-info-header">
-            Informacion de usuario
+            Información de usuario
           </div>
         <div class="card-body">
           <div class="row">
