--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -44,7 +44,7 @@
 
         <ul class="nav nav-tabs mb-4">
             <li class="nav-item">
-              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion usuario</a>
+              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Información usuario</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" ng-class="{ active : tabsIndex == 1 }"  ng-click="goToTab(1)" >Permisos</a>
@@ -188,17 +188,17 @@
         <div class="col-md-12">
           <div class="card " >
             <div class="card-body">
-              <h5 class="card-title">Busqueda por cliente </h5>
+              <h5 class="card-title">Búsqueda por cliente </h5>
               <div class="row">
                 <div class="col-sm-12 col-md-6 col-lg-6">
-                  <!-- <label for="clientes">Busqueda por cliente</label> -->
+                  <!-- <label for="clientes">Búsqueda por cliente</label> -->
                   <div class="input-group mb-3">
                     <input type="text" id="clientes"
                     class="form-control"
                     ng-keydown="$event.keyCode === 13 && getClientNew(true)"
                     ng-model="nombre_cliente"
-                    placeholder="Busqueda por Cliente"
-                    aria-label="Busqueda por Cliente"
+                    placeholder="Búsqueda por Cliente"
+                    aria-label="Búsqueda por Cliente"
                     aria-describedby="basic-addon2">
                     <div class="input-group-append">
                       <button class="btn btn-outline-secondary"  ng-click="getClientNew(true)" type="button">Buscar</button>
