--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -1,20 +1,19 @@
 
-<div >
+<div id="wrapper">
 
 
 <div class="container">
 	<div class="row">
-		<div style="margin: auto;">
+    <div style="margin: auto;">
+      
       <div class="card card-min" style=" margin-top: 60px; padding: 20px;" >
         <div class="panel panel-default">
           <div class="panel-body">
             <div class="text-center">
-              <h3><i class="fa fa-lock fa-4x"></i></h3>
+              <img src="img/logoddo.png" style="width:100%;height:100%" alt="">
               <h2 class="text-center">¿Se te olvidó tu contraseña?</h2>
               <p>Puede restablecer su contraseña aquí.</p>
               <div class="panel-body">
-
-                
 
                   <div class="form-group">
                     <div class="input-group">
@@ -41,5 +40,5 @@
 	</div>
 </div>
 
-      <my-footer></my-footer>
 </div>
+      <my-footer></my-footer>
