--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -77,7 +77,7 @@
             <div class="form-group">
               <label>Email:</label><br>
               <span ng-if="typeview == 'view'"  >{{user.email}}</span>
-              <input type="email" ng-model="user.email"  ng-keyup="availableEmail()" ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" required placeholder="Username">
+              <input type="email" ng-model="user.email"   ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" required placeholder="Username">
 
             </div>
             <div  ng-show="!emailValid" class="invalid-feedback">
@@ -87,7 +87,7 @@
             <div class="form-group">
               <label>Username:</label><br>
               <span ng-if="typeview == 'view'"  >{{user.username}}</span>
-              <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" placeholder="Username">
+              <input type="text" ng-model="user.username"  ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" placeholder="Username">
 
             </div>
             <div ng-show="!usernameValid" class="invalid-feedback">
