--- a/app/comps/olvidoPass/olvidoPass.html
+++ b/app/comps/olvidoPass/olvidoPass.html
@@ -29,7 +29,7 @@
                        Restablecer contraseña</button>
                   </div>
 
-
+                  <a href="#!/">Volver</a>
               </div>
             </div>
           </div>
