--- a/app/comps/clientHeader/clientHeader.html
+++ b/app/comps/clientHeader/clientHeader.html
@@ -16,7 +16,7 @@
   <div class="row " style="margin-bottom: 15px;" >
 
       <div class="col-md-6" style="padding-left: 0px !important;">
-        <div class="card card-min " >
+        <div id="card-left" class="card card-min " >
           <div class="card-info-header">
             Información del Cliente
 
@@ -36,7 +36,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-6" style="padding-right: 0px !important;" >
+      <div id="card-rigth" class="col-md-6" style="padding-right: 0px !important;" >
 
         <div class="card card-min" >
           <div class="card-info-header">
