--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -84,18 +84,18 @@
   
                 <div class="row mt-3 mb-5" >
   
-                  <div class="col-4">
+                  <div class="col-md-4 col-sm-12">
                     <label></label>
                     <button type="button" class="btn btn-info" ng-click="addPedidoV2()" ng-show="ID == null"  >Abrir Pedido</button>
                     <button type="button" class="btn btn-success"  ng-show="ID != null" ng-click="openModalProducts()" >Agregar Productos</button>
                   </div>
   
-                  <div class="col-4">
+                  <div class="col-md-4 col-sm-12">
                     <label></label>
                     <button type="button"  class="btn btn-success" ng-click="openModalDyn(0,ID)" ng-show="ID != null" ng-disabled="pedido.pedido.length < 1 || !clienteValido" >Finalizar pedido</button>
                   </div>
   
-                  <div class="col-4">
+                  <div class="col-md-4 col-sm-12">
                     <div ng-show="!clienteEmpleado && ID != null" >
                       <label>Tipo de pedido</label>
                         <!--<input type="text" ng-model="user_view.role" class="form-control" placeholder="Tipo de usuario">-->
@@ -118,24 +118,24 @@
   
   
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Monto mínimo pedido</label><br>
                     <span >{{formato(2,client.monto_minimo)? formato(2, client.monto_minimo):0}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Monto mínimo pick - up</label><br>
                     <span >{{formato(2,client.monto_min_pick)? formato(2, client.monto_min_pick):0}}</span>
   
                   </div>
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Crédito disponible Bs.S</label><br>
                     <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
   
                   </div>
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Crédito disponible USD</label><br>
                     <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
   
@@ -146,22 +146,22 @@
                 </div>
   
                 <div class="row mb-5" ng-if="clienteEmpleado">
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Max. Unidades medicina</label><br>
                     <span >{{client.max_unid_med_emp}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Max. Unidades misceláneos</label><br>
                     <span >{{client.max_unid_misc_emp}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Disp. Unidades medicina</label><br>
                     <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Disp. Unidades misceláneos</label><br>
                     <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
   
@@ -367,17 +367,17 @@
   
   
   
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                   <label></label>
                   <button type="button" ng-show="editView" class="btn btn-info" ng-click="openModalProducts()">Agregar Productos</button>
                 </div>
   
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                   <label></label>
                   <button type="button"  class="btn btn-success" ng-show="editView && pedido.estatus_id < 2"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
                 </div>
   
-                <div class="col-4">
+                <div class="col-md-4 col-sm-12">
                   <div   ng-show="editView && !clienteEmpleado" >
   
                     <label>Tipo de pedido</label>
@@ -398,25 +398,25 @@
   
                 <div class="row mt-5 mb-5" ng-show="editView" >
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Monto mínimo pedido Bs.S</label><br>
                     <span >{{formato(2,client.monto_minimo)? formato(2, client.monto_minimo):0}}</span>
   
                   </div>
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Monto mínimo pick-Up</label><br>
                     <span >{{formato(2,client.monto_min_pick)? formato(2, client.monto_min_pick):0}}</span>
   
                   </div>
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Crédito disponible Bs.S</label><br>
                     <span >{{formato(2,(creditoClient.disp_bs_format)? (creditoClient.disp_bs_format - totales.bsConIva):0)}}</span>
   
                   </div>
   
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Crédito disponible USD</label><br>
                     <span >{{formato(3,(creditoClient.disp_usd_format)? (creditoClient.disp_usd_format - totales.UsdConIva):0)}}</span>
   
@@ -426,22 +426,22 @@
                 </div>
   
                 <div class="row mb-5" ng-show="editView && clienteEmpleado">
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Max. Unidades medicina</label><br>
                     <span >{{client.max_unid_med_emp}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Max. Unidades misceláneos</label><br>
                     <span >{{client.max_unid_misc_emp}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Disp. Unidades medicina</label><br>
                     <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
   
                   </div>
-                  <div class="col-3">
+                  <div class="col-md-3 col-sm-12">
                     <label>Disp. Unidades misceláneos</label><br>
                     <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
   
@@ -640,13 +640,13 @@
             </form>
   
           </div>
-        </div>
-        <div class="modal-footer" style="display: block;margin: 0 auto;">
-          <button type="button" class="btn btn-secondary" ng-click="closeModalOrder()">Regresar</button>
-          <button type="button"  class="btn btn-primary"  ng-if="userLogged.permisos.pedido.editar" ng-show="!editView && (pedido.estatus_id < 3 || pedido.estatus_id == 6 ) "   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
-          <button type="button"  class="btn btn-success" ng-show="editView && (pedido.estatus_id < 2 || pedido.estatus_id == 6)"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
-  
-          <!-- <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1" ng-show="editView" ng-click="updPedido();">Actualizar pedido</button> -->
+          <div class="modal-footer" style="display: block;margin: 0 auto;">
+            <button type="button" class="btn btn-secondary" ng-click="closeModalOrder()">Regresar</button>
+            <button type="button"  class="btn btn-primary"  ng-if="userLogged.permisos.pedido.editar" ng-show="!editView && (pedido.estatus_id < 3 || pedido.estatus_id == 6 ) "   ng-disabled="!clienteValido"  ng-click="editPedido();">Editar</button>
+            <button type="button"  class="btn btn-success" ng-show="editView && (pedido.estatus_id < 2 || pedido.estatus_id == 6)"  ng-disabled="pedido.pedido.length < 1 || !clienteValido"  ng-click="openModalDyn(0,ID)" >Finalizar pedido</button>
+    
+            <!-- <button type="button"  class="btn btn-success" ng-disabled="pedido.pedido.length < 1" ng-show="editView" ng-click="updPedido();">Actualizar pedido</button> -->
+          </div>
         </div>
       </div>
     </div>
@@ -1077,16 +1077,16 @@
                         </button>
                       </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 col-md-12">
   
-                      <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para psicotrópico</button>
+                      <button class="btn btn-warning" style="float: left; font-weight: bold;margin-bottom: 1rem; width: 100%;" ng-click="infoPsico = true;" ng-show="!infoPsico"  > <i class="fa fa-info-circle"></i> Requisitos para psicotrópico</button>
                     </div>
   
   
-                    <div class="col-md-6" ng-show="showProductTable || hasUserClient"  >
+                    <div class="col-md-6 col-md-12" ng-show="showProductTable || hasUserClient"  >
                       <!-- userLogged.pedido.crear :{{userLogged. }} -->
-                      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="initModal();"  ng-if="userLogged.permisos.pedido.crear"  ng-disabled="!clienteValido" ng-show="!unicOrderID"  > <i class="fa fa-edit"></i> Crear pedido</button>
-                      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem;" ng-click="getPedido(unicOrderID);" ng-disabled="!clienteValido" ng-show="unicOrderID" data-toggle="modal" data-target="#showPedidoModal"  > <i class="fa fa-edit"></i>Continuar Pedido </button>
+                      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem; width: 100%;" ng-click="initModal();"  ng-if="userLogged.permisos.pedido.crear"  ng-disabled="!clienteValido" ng-show="!unicOrderID"  > <i class="fa fa-edit"></i> Crear pedido</button>
+                      <button class="btn btn-primary" style="float: right; font-weight: bold;margin-bottom: 1rem; width: 100%;" ng-click="getPedido(unicOrderID);" ng-disabled="!clienteValido" ng-show="unicOrderID" data-toggle="modal" data-target="#showPedidoModal"  > <i class="fa fa-edit"></i>Continuar Pedido </button>
   
                     </div>
   
