--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -54,7 +54,7 @@
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12">
           <div class="form-check mb-3">
-            <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBúsqueda" id="exampleRadios1" ng-value="0" >
+            <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" ng-value="0" >
             <label class="form-check-label" for="exampleRadios1">
               Búsqueda por producto
             </label>
@@ -113,34 +113,42 @@
         </div>
 
       </div>
-      <div ng-if="clientIndex != -1" >
-        <!-- <table datatable="" dt-options="dtOptions" dt-columns="dtColumns" dt-instance="dtInstance" class="table table-striped table-bordered">
-        </table> -->
+      <div >
 
-        <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptions">
+
+        <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsProd">
           <thead>
             <tr>
+
               <th scope="col"><p class="text-center">#</p></th>
-              <th scope="col"><p class="text-center">Nombre de producto</p></th>
+              <th scope="col"><p class="text-center">Nombre Producto</p></th>
               <th scope="col"><p class="text-center">Categoria</p></th>
-              <th scope="col"><p class="text-center">Proveedor</p></th>
-              <th scope="col"><p class="text-center">Principio activo</p></th>
-              <th scope="col"><p class="text-center">Fecha vencimiento</p></th>
               <th scope="col"><p class="text-center">Existencia</p></th>
+              <th scope="col"><p class="text-center">Precio Bs.S</p></th>
+              <th scope="col"><p class="text-center">Iva Bs.S</p></th>
+              <th scope="col"><p class="text-center">Precio USD</p></th>
+              <th scope="col"><p class="text-center">Iva USD</p></th>
+              <th scope="col"><p class="text-center">Principio Activo</p></th>
+              <th scope="col"><p class="text-center">Proveedor</p></th>
             </tr>
           </thead>
           <tbody>
 
-            <tr ng-repeat="x in listaProd">
-              <th scope="row">{{ $index + 1 }}</th>
+
+            <tr ng-repeat="x in productos"   >
+  
+              <td><p class="text-left">{{ $index + 1 }}</p></td>
               <td><p class="text-left">{{ x.nombre_producto }}</p></td>
               <td><p class="text-left">{{ x.categoria }}</p></td>
-              <td><p class="text-left">{{ x.proveedor }}</p></td>
-              <td><p class="text-left">{{ x.princ_activo }}</p></td>
-              <td><p class="text-left">{{ x.fecha_vence }}</p></td>
               <td><p class="text-left">{{ x.existencia }}</p></td>
+              <td><p class="text-right">{{  formato(2,x.precio_neto_bs) }}</p></td>
+              <td><p class="text-right">{{  formato(2,x.iva_bs) }}</p></td>
+              <td><p class="text-right">{{  formato(3,x.precio_neto_usd) }}</p></td>
+              <td><p class="text-right">{{  formato(3,x.iva_usd) }}</p></td>
+              <td><p class="text-left">{{ x.princ_activo }}</p></td>
+              <td><p class="text-left">{{  x.proveedor }}</p></td>
 
-            </tr>
+          </tr>
           </tbody>
         </table>
 
